[build-system]
requires = ['setuptools>=45', 'setuptools_scm[toml]>=6.2']

[project]
name = 'pyHM'
authors = [
    {name = 'StSav012', email = 'stsav012@gmail.com'},
]
description = 'VeriCold logfiles plotter'
readme = 'README.md'
license = 'LGPL-3.0-or-later'
requires-python = '>=3.8'
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering :: Physics',
    'Typing :: Typed',
]
dynamic = ['version']
dependencies = ['QtPy']

[project.optional-dependencies]
icons = ['QtAwesome']
pyside6 = ['PySide6 >=6.1, !=6.8.0, !=6.8.0.1']
pyqt5 = ['PyQt5 >=5.15', 'PyQtChart >=5.15']
pyqt6 = ['PyQt6 >=6.1', 'PyQt6-Charts']

[project.gui-scripts]
pyHM = 'pyHM:run_gui'

[project.urls]
'Source Code' = 'https://github.com/StSav012/pyHM'
'Bug Tracker' = 'https://github.com/StSav012/pyHM/issues'

[tool.setuptools_scm]
local_scheme = 'no-local-version'
write_to = 'pyHM/_version.py'

[tool.setuptools]
packages = ['pyHM', 'pyHM.advantech_daq', 'pyHM.advantech_daq.api']

[tool.setuptools.dynamic]
version = {attr = 'pyHM._version.__version__'}

#[tool.setuptools.packages.find]
#where = ["."]
#exclude = ["data"]

[tool.setuptools.exclude-package-data]
"*" = [
    ".github",
    ".gitignore",
]

[tool.black]
target-versions = ["py312", "py313"]

[tool.ruff]
exclude = [
    "__pycache__",
    ".git",
    ".github",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "data",
    "dist",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
extend-select = ["I", "NPY201"]
